--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am currently a student at Texas A&amp;M University. Driven by a passion for our communities, our built and natural environment, and using geospatial technologies to link these, my interests focus on demonstrating the powers of the spatial perspective.
                     </p>
                 </div>
             </div>
@@ -87,10 +85,19 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>XYZ Atlas</h3>
+                <h4>GIS Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <ul>
+                        <li>Member of team comprised of 8 multidisciplinary interns to coordinate public events and engage the community through a survey asking where we experience emotions within our city</li>
+                        <li>Designed and managed a database containing geocoded responses pertaining to questionnaire</li>
+                        <li>Created maps and visualizations based off of responses that engaged community members</li>
+                        <li>Provided GIS expertise and guidance for team to ensure successful collection of geospatial data
+                        </li>
+                        <li>Assisted with creating web mapping application to gather and store locational responses for a survey
+                        </li>
+                    </ul>
+          
                 </p>
             </div>
 
