--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="December 2016 – Current">
                 <h3>XYZ Atlas</h3>
                 <h4>GIS Intern</h4>
                 <p>
